[gd_scene load_steps=2 format=3 uid="uid://7xqtkvl73d56"]

[ext_resource type="Script" uid="uid://dlc2jdv4ubnoy" path="res://Management/checkpoint_weapon_change.gd" id="1_lyxpg"]

[node name="checkpoint_weapon_change" type="CanvasLayer"]
script = ExtResource("1_lyxpg")

[node name="Panel" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 128.0
offset_top = 96.0
offset_right = -128.0
offset_bottom = -72.0
grow_horizontal = 2
grow_vertical = 2

[node name="sword" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 32.0
offset_right = -288.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
text = "Sword"

[node name="sword2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 32.0
offset_top = 128.0
offset_right = -288.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Sword"

[node name="axe" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = 32.0
offset_right = -160.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
text = "Axe"

[node name="axe2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 160.0
offset_top = 128.0
offset_right = -160.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Axe"

[node name="spear" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 32.0
offset_right = -32.0
offset_bottom = -128.0
grow_horizontal = 2
grow_vertical = 2
text = "Spear"

[node name="spear2" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 288.0
offset_top = 128.0
offset_right = -32.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 2
text = "Spear"

[node name="W1Label" type="Label" parent="."]
offset_left = 224.0
offset_top = 96.0
offset_right = 416.0
offset_bottom = 128.0
text = "Arma 1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="W2Label" type="Label" parent="."]
offset_left = 224.0
offset_top = 192.0
offset_right = 416.0
offset_bottom = 224.0
text = "Arma 2"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Panel/sword" to="." method="_on_sword_1_pressed"]
[connection signal="pressed" from="Panel/sword2" to="." method="_on_sword_2_pressed"]
[connection signal="pressed" from="Panel/axe" to="." method="_on_axe_1_pressed"]
[connection signal="pressed" from="Panel/axe2" to="." method="_on_axe_2_pressed"]
[connection signal="pressed" from="Panel/spear" to="." method="_on_spear_1_pressed"]
[connection signal="pressed" from="Panel/spear2" to="." method="_on_spear_2_pressed"]
